Removed Guice references in Strata.Foundation.Core